...
    <string-array name="array_role">
        <item>Health Agent</item>
        <item>Health Service</item>
    </string-array>

    <!--Error user login/create account-->
    <string name="mandatory_field">Mandatory unfilled fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_matches">Password and confirm password does not match!!</string>
    <string name="password_length">Password length must have at least 8 character!!</string>
    <string name="incorrect_user_or_password">User or password incorrect</string>
    <string name="user_exist">That registered user already exists</string>
    <string name="error_terms_and_conditios">You must agree to terms and conditions</string>

    <!--Main-->
    <string name="close_question">Click again to close</string>

    <!--Error View-->
    <string name="error_general_one">An unexpected eror ocurred.</string>
...
